objects/Account.object
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Platinum</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__School_Code__c</fullName>
        <description>A code that uniquely identifies an educational institution using standards recognized in your region.</description>
        <externalId>true</externalId>
        <inlineHelpText>A code that uniquely identifies an educational institution using standards recognized in your region.</inlineHelpText>
        <label>School Code</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>C_digo_de_Inter_s__c</fullName>
        <description>Programa al que está interesado el aspirante</description>
        <externalId>true</externalId>
        <label>Código de programa</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Maybe</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proceso_de_negocio__c</fullName>
        <label>Proceso de Negocio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pregrado</fullName>
                </value>
                <value>
                    <fullName>Posgrado</fullName>
                </value>
                <value>
                    <fullName>Educacion Continuada</fullName>
                    <label>Educación Continuada</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Valor_del_programa__c</fullName>
        <description>Valor de la matricula del programa</description>
        <label>Valor del programa</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>hed__Billing_County__c</fullName>
        <description>The county detail for the Billing Address.</description>
        <label>Billing County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Current_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the current Address record for this Account. The Account&apos;s Billing Address field is populated with the address fields from the current Address record.</description>
        <inlineHelpText>Lookup to the current Address record for this Account. The Account&apos;s Billing Address field is populated with the address fields from the current Address record.</inlineHelpText>
        <label>Current Address</label>
        <referenceTo>hed__Address__c</referenceTo>
        <relationshipLabel>Accounts (Current Address)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The main Contact for a Household or Administrative Account.</description>
        <inlineHelpText>The main Contact for a Household or Administrative Account.</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Account</relationshipLabel>
        <relationshipName>Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Shipping_County__c</fullName>
        <description>The county detail for the Shipping Address.</description>
        <label>Shipping County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Identificacion_fiscal__c</fullName>
        <description>Número de identificación fiscal para cuentas de empresas.</description>
        <externalId>true</externalId>
        <label>Identificación fiscal</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Inscription_Close_Date__c</fullName>
        <label>Fecha de cierre de inscripción</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tipo_de_identificacion__c</fullName>
        <label>Tipo de identificación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Tipo_de_identificacion_fiscal</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Email__c</fullName>
        <description>The email address used to verify a credential from the organization related to this Account.</description>
        <inlineHelpText>The email address used to verify a credential from the organization related to this Account.</inlineHelpText>
        <label>Credentialing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>hed__Billing_Address_Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates that this billing address is inactive</description>
        <inlineHelpText>Indicates that this billing address is inactive</inlineHelpText>
        <label>Billing Address Inactive</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>Cuentas_Instituci_n</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Proceso_de_negocio__c</columns>
        <columns>PARENT_NAME</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Academic_Program,Account.Administrative,Account.Educational_Institution,Account.University_Department</value>
        </filters>
        <label>Cuentas Educativas</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <recordTypes>
        <fullName>HH_Account</fullName>
        <active>true</active>
        <description>A Household containing one or more individuals.</description>
        <label>Household Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Administrative</fullName>
        <active>true</active>
        <description>An administrative account.</description>
        <label>Administrative</label>
    </recordTypes>
    <recordTypes>
        <fullName>Academic_Program</fullName>
        <active>true</active>
        <description>An Academic Program offered at the educational institution.</description>
        <label>Academic Program</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sports_Organization</fullName>
        <active>true</active>
        <description>A sports organization.</description>
        <label>Sports Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Business_Organization</fullName>
        <active>true</active>
        <description>A business organization.</description>
        <label>Business Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>University_Department</fullName>
        <active>true</active>
        <description>A department in the educational institution.</description>
        <label>University Department</label>
    </recordTypes>
    <recordTypes>
        <fullName>Educational_Institution</fullName>
        <active>true</active>
        <description>An educational institution.</description>
        <label>Educational Institution</label>
    </recordTypes>
</CustomObject>